--- a/src/main/webapp/pages/_editLetters/_editLetters.html
+++ b/src/main/webapp/pages/_editLetters/_editLetters.html
@@ -1,2 +1,87 @@
-<wm-partial data-ng-controller="_editLettersPageController"> 
+<wm-partial data-ng-controller="_editLettersPageController" name="partial1">
+    <wm-layoutgrid name="layoutgrid28">
+        <wm-gridrow name="gridrow96">
+            <wm-gridcolumn columnwidth="12" name="gridcolumn131_1">
+                <wm-label padding="unset 0.5em" name="label44_1" caption="The letter templates created here can either be generated automatically when the form enters a status (controlled on the &quot;Statuses&quot; tab), or they can be created manually by municipality employees on the &quot;Letters&quot; tab while viewing the form."></wm-label>
+            </wm-gridcolumn>
+        </wm-gridrow>
+        <wm-gridrow name="gridrow97">
+            <wm-gridcolumn columnwidth="12" name="gridcolumn133_1">
+                <wm-livegrid formlayout="dialog" name="livegridLetters">
+                    <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.lvLetterTemplatesData.dataSet" navigation="Classic" name="gridLetters" filtermode="multicolumn" exportformat="EXCEL" showrecordcount="true">
+                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="100px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true" rowactionsposition="0"></wm-grid-column>
+                        <wm-grid-column binding="letterTitle" caption="Letter Name" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                        <wm-grid-column binding="usersByCreatedBy.fullName" caption="Created By" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
+                        <wm-grid-column binding="createdDate" caption="Date Created" type="datetime" generator="assigned" readonly="true" edit-widget-type="datetime" show="true" filterwidget="date">{{row.getProperty('createdDate') | toLocalDateString}}</wm-grid-column>
+                        <wm-grid-column binding="usersByModifiedBy.fullName" caption="Modified By" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true"
+                        related-entity-name="Users"></wm-grid-column>
+                        <wm-grid-column binding="modifiedDate" caption="Date Modified" type="datetime" generator="assigned" readonly="true" edit-widget-type="datetime" show="true" filterwidget="date">{{row.getProperty('modifiedDate') | toLocalDateString}}</wm-grid-column>
+                        <wm-grid-action key="addNewRow" display-name="New Letter" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Letter" action="addNewRowAction($event)"
+                        shortcutkey="" disabled="false"></wm-grid-action>
+                        <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="updaterowAction($event)" disabled="false"></wm-grid-row-action>
+                        <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-trash" title="Delete" action="deleteRow()" disabled="false"></wm-grid-row-action>
+                    </wm-grid>
+                </wm-livegrid>
+            </wm-gridcolumn>
+        </wm-gridrow>
+    </wm-layoutgrid>
+    <wm-liveform novalidate="false" errormessage="" title="Edit Letter Template" formlayout="dialog" iconclass="wi wi-notepad" dataset="bind:Variables.lvLetterTemplatesData.dataSet" captionalign="left" captionposition="top" name="liveformLetters">
+        <wm-form-field name="id" displayname="Id" show="false" primary-key="true" generator="identity" key="id" type="integer" readonly="true" required="true" step="0" widget="number"></wm-form-field>
+        <wm-form-field name="formTypes" displayname="Form Types" show="false" primary-key="false" generator="assigned" key="formTypes" type="list" is-related="true" readonly="false" required="false" widget="select" dataset="bind:Variables.CurrentFormObj.dataSet"
+        datafield="All Fields" displayfield="formType" defaultvalue="bind:Variables.CurrentFormObj.firstRecord" placeholder="Select value"></wm-form-field>
+        <wm-form-field name="inspectionDesign" displayname="Inspection Design" show="false" primary-key="false" generator="assigned" key="inspectionDesign" type="list" is-related="true" readonly="false" required="false" widget="select"
+        placeholder="Select value"></wm-form-field>
+        <wm-form-field name="letterId" displayname="Letter Id" show="false" primary-key="true" generator="identity" key="letterId" type="integer" readonly="true" required="true" step="0" widget="number" inputtype="number" placeholder="Enter value"></wm-form-field>
+        <wm-form-field name="letterBody" displayname="Letter Body" show="false" primary-key="false" generator="assigned" key="letterBody" type="text" readonly="false" required="false" widget="textarea" maxchars="2147483647" placeholder="Enter value"></wm-form-field>
+        <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-primary" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
+        <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
+    </wm-liveform>
+    <wm-view class="dialog-view" name="view6">
+        <wm-dialog dialogtype="design-dialog" class="modal-larger" modal="true" title="Letter Template Designer" iconclass="wi wi-notepad" name="dialogLetterTemplate">
+            <wm-layoutgrid columns="2" name="layoutgrid26-a">
+                <wm-gridrow name="gridrow99-a">
+                    <wm-gridcolumn columnwidth="3" name="gridcolumn143-a">
+                        <!--put tokens here  -->
+                        <wm-label class="col-md-12 form-control-static clearfix" name="label5_____1" caption="Available Fields" fontweight="bold"></wm-label>
+                        <br>
+                        <div class="app-grid-layout clearfix" name="layoutgridFieldTokens">
+                            <wm-gridrow name="gridrow9__9">
+                                <div ng-repeat="token in Variables.svGetAvailableTokens.dataSet" class="app-grid-column dynamic-field-column col-sm-12" name="fieldTokenColumn{{$index}}">
+                                    <button class="btn btn-primary" type="button" margin="unset 0.5em" name="buttonAddToken{{token}}" ng-click="insertField(token)" horizontalalign="right">{{token}}</button>
+                                </div>
+                            </wm-gridrow>
+                        </div>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="9" name="gridcolumn143-b">
+                        <wm-layoutgrid columns="1" name="layoutgrid26">
+                            <wm-gridrow name="gridrow99">
+                                <wm-gridcolumn columnwidth="12" name="gridcolumn143">
+                                    <wm-label name="label2_1" caption="Letter Name" fontweight="bold"></wm-label>
+                                    <input class="form-control app-textbox" name="letterTitle" type="text" ng-model="Variables.svGetLetterTemplate.dataSet.title">
+                                </wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow100">
+                                <wm-layoutgrid columns="3" name="layoutgrid26-02">
+                                    <wm-gridrow ng-repeat="letterRow in Variables.svGetLetterTemplate.dataSet.allRows" name="gridrow100-{{$index}}" style="white-space: nowrap;">
+                                        <wm-gridcolumn ng-repeat="rowSection in letterRow.sections" columnwidth="{{Math.round(12 * (rowSection.width / 540))}}" name="gridcolumn144-{{$index}}">
+                                            <!--<select name="letterJustification{{$index}}" class="form-control" ng-model="rowSection.textSettings.justification" ><option value="Left">Left</option><option value="Centered">Centered</option><option value="Right">Right</option></select><input name="letterFontSize{{$index}}" type="text" class="form-control" ng-model="rowSection.textSettings.fontSize" /><input name="letterBold{{$index}}" type="checkbox" class="form-control" ng-model="rowSection.textSettings.isBold" />
+                                            -->
+                                            <textarea name="letterHeader{{$index}}" class="form-control app-textarea token-field" show="true" key="letterHeader01" maxchars="1000" ng-model="rowSection.text" style="resize: none;"></textarea>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                </wm-layoutgrid>
+                            </wm-gridrow>
+                        </wm-layoutgrid>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow99_1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn146"></wm-gridcolumn>
+                </wm-gridrow>
+            </wm-layoutgrid>
+            <wm-dialogactions name="dialogactions4">
+                <wm-button class="btn-primary" caption="Save" on-click="Variables.svSaveLetterTemplate.invoke();Widgets.dialogLetterTemplate.close()" name="buttonSaveLetterTemplate" iconclass="wi wi-save"></wm-button>
+                <wm-button class="btn-secondary" caption="Cancel" type="button" margin="unset 0.5em" name="button8" iconclass="wi wi-cancel" on-click="Widgets.dialogLetterTemplate.close()"></wm-button>
+            </wm-dialogactions>
+        </wm-dialog>
+    </wm-view>
 </wm-partial>
