New Page DeviceDataEntry available for CXAdmin to mange details of all app registered devices New files added - [DeviceDataEntry] Files modified - [leftnav,webapp,pom.xml,pages-config.json]

--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -39,5 +39,8 @@
         <wm-nav-item name="nav_item12">
             <wm-anchor name="anchor12" iconclass="wi wi-long-arrow-right" caption="Inspections DevDataEntry" on-click="Variables.goToPage_InspectionsDevDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
+        <wm-nav-item name="nav_item12">
+            <wm-anchor name="anchor121" iconclass="wi wi-long-arrow-right" caption="Device DevDataEntry" on-click="Variables.goToPage_DeviceDataEntry.invoke()" accessroles="CXAdmin"></wm-anchor>
+        </wm-nav-item>
     </wm-nav>
 </wm-partial>
