--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -500,6 +500,9 @@
                                                 <wm-label padding="unset 0.5em" name="label139" caption="To &quot;manually&quot; generate one of the letters below, which will display the form content as it stands at this moment, use the &quot;Generate Letter&quot; button."></wm-label>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
+                                        <wm-gridrow name="gridrow115">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn207"></wm-gridcolumn>
+                                        </wm-gridrow>
                                         <wm-gridrow name="gridrow110">
                                             <wm-gridcolumn columnwidth="12" name="gridcolumn201_1">
                                                 <wm-grid title="" dataset="bind:Variables.lvLetterTemplates.dataSet" navigation="Classic" name="gridLetters" filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
