--- a/src/main/webapp/pages/MunicipalityInspections/MunicipalityInspections.html
+++ b/src/main/webapp/pages/MunicipalityInspections/MunicipalityInspections.html
@@ -1,4 +1,4 @@
-<wm-page data-ng-controller="MunicipalityInspectionsPageController" pagetitle="Municipality Inspections" name="page1">
+<wm-page data-ng-controller="MunicipalityInspectionsPageController" pagetitle="Inspections Dashboard" name="page1">
     <wm-header content="header" name="header1"></wm-header>
     <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
@@ -79,6 +79,20 @@
                         </wm-tile>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn12" padding="2em unset" horizontalalign="center">
+                        <wm-tile width="240px" height="160px" class="bg-primary" name="tileSubmitCase" on-click="Widgets.dialogNewCase.open()">
+                            <wm-layoutgrid height="100%" name="layoutgrid8">
+                                <wm-gridrow height="100%" name="gridrow11_3">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn24_3" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-note-add"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="3em unset unset unset" horizontalalign="center" name="gridcolumn25_2" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Submit Case" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="2em unset" horizontalalign="center">
                         <wm-tile name="tileScheduleInspections" width="240px" height="160px" class="bg-primary" accessroles="InspectorManager,MunicipalityAdmin,CXAdmin" on-click="Variables.goToPage_ScheduleInspections.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid6">
                                 <wm-gridrow height="100%" name="gridrow10_1">
@@ -93,7 +107,9 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="2em unset" horizontalalign="center">
+                </wm-gridrow>
+                <wm-gridrow name="gridrow10_2">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn21" horizontalalign="center" padding="2em unset">
                         <wm-tile name="tileManageInspections" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageInspections.invoke()" accessroles="InspectorManager,CXAdmin,MunicipalityAdmin">
                             <wm-layoutgrid height="100%" name="layoutgrid9">
                                 <wm-gridrow height="100%" name="gridrow11_2">
@@ -108,9 +124,20 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn22" horizontalalign="center" padding="2em unset"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn23_2" horizontalalign="center" padding="2em unset"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
+    <wm-view class="dialog-view" name="viewNewForm">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="Submit Case" iconclass="wi wi-note-add" name="dialogNewCase">
+            <wm-panel iconclass="" autoclose="outsideClick" name="panelNewCasePage" content="newFormDialog" title="" class="panel-transparent" margin="0px">
+                <wm-param name="municipalityId" value="bind:Widgets.panelSelectMunicipality.Widgets.selectMunicipality.datavalue.ID" type="integer"></wm-param>
+                <wm-param name="dialogName" value="dialogNewCase" type="string"></wm-param>
+                <wm-param name="isCase" value="true" type="boolean"></wm-param>
+            </wm-panel>
+        </wm-dialog>
+    </wm-view>
 </wm-page>
