--- a/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
+++ b/src/main/webapp/pages/MyMunicipality/MyMunicipality.html
@@ -39,7 +39,7 @@
                             <wm-layoutgrid height="100%" name="layoutgrid3">
                                 <wm-gridrow height="100%" name="gridrow4">
                                     <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn8" class="col-xs-3">
-                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-assignment"></wm-icon>
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-sim-card-alert"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="2.5em unset unset unset" horizontalalign="center" name="gridcolumn9" class="col-xs-9">
                                         <wm-label name="tileTitle" caption="Process Forms" class="p" fontsize="1.5" fontunit="em"></wm-label>
@@ -66,6 +66,21 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow6">
                     <wm-gridcolumn columnwidth="4" name="gridcolumn12" horizontalalign="center" padding="2em unset">
+                        <wm-tile width="240px" height="160px" class="bg-primary" name="tileMuniForms" on-click="Variables.goToPage_MunicipalityForms.invoke()">
+                            <wm-layoutgrid height="100%" name="layoutgrid10">
+                                <wm-gridrow height="100%" name="gridrow13">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn28" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-assignment"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" name="gridcolumn29" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="Municipality Forms" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileStatLabel" caption="00" fontsize="3" fontunit="em" class="p"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn13" padding="2em unset" horizontalalign="center">
                         <wm-tile width="240px" height="160px" class="bg-primary" name="tile8" on-click="Variables.goToPage_MunicipalityProjects.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid9">
                                 <wm-gridrow height="100%" name="gridrow12">
@@ -80,7 +95,7 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn13" padding="2em unset" horizontalalign="center">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn14" padding="2em unset" horizontalalign="center">
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_ManageMunicipalityVendors.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid4">
                                 <wm-gridrow height="100%" name="gridrow5">
@@ -95,7 +110,9 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn14" padding="2em unset" horizontalalign="center">
+                </wm-gridrow>
+                <wm-gridrow name="gridrow10">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn21" padding="2em unset" horizontalalign="center">
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_MunicipalityTransactions.invoke()">
                             <wm-layoutgrid height="100%" name="layoutgrid7">
                                 <wm-gridrow height="100%" name="gridrow9">
@@ -109,9 +126,7 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                </wm-gridrow>
-                <wm-gridrow name="gridrow10">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn21" padding="2em unset" horizontalalign="center">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn22" padding="2em unset" horizontalalign="center">
                         <wm-tile width="240px" height="160px" class="bg-primary" on-click="tile7Click($event, $scope)" name="tile7">
                             <wm-layoutgrid height="100%" name="layoutgrid8">
                                 <wm-gridrow height="100%" name="gridrow11">
@@ -125,7 +140,7 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn22" padding="2em unset" horizontalalign="center">
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn23" horizontalalign="center" padding="2em unset">
                         <wm-tile name="statTile" width="240px" height="160px" class="bg-primary">
                             <wm-layoutgrid height="100%" name="layoutgrid6">
                                 <wm-gridrow height="100%" name="gridrow8">
@@ -140,7 +155,6 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn23" horizontalalign="center" padding="2em unset"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
