Sending Notifications to android devices Files modified - [DeviceDataEntry,PushNotification]

--- a/src/main/webapp/pages/DeviceDataEntry/DeviceDataEntry.html
+++ b/src/main/webapp/pages/DeviceDataEntry/DeviceDataEntry.html
@@ -64,6 +64,7 @@
                     <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                 </wm-liveform>
             </wm-livegrid>
+            <wm-button class="btn-default" caption="Button" type="button" margin="unset 0.5em" name="button1" on-click="Variables.svSendNotification.invoke()"></wm-button>
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
